--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -502,7 +502,7 @@
                 }
             }
         }
-        #gateway-cropper-container.width-and-height {
+        #cropper-container.width-and-height {
             width: 180px;
             .cr-viewport {
                 border: 2px dashed #777777;
@@ -513,7 +513,7 @@
             @include breakpoint($xs) {
                 width: 100%;
                 height: auto;
-            }
+            } 
         }
         .max-size-label {
             label {
